# cairn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  Makefile  README.md  RUNBOOK.md  docker-compose.yml  issues.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_ast_parser.py  comparison.py  end_to_end.py  latency.py  retrieval_eval.py  run_all.py  token_reduction.py
benchmarks/datasets/: __init__.py  demo.py
benchmarks/results/: baseline.json  comparison.json  current.json  end_to_end.json  phase6.json  rerank_ab.json
cli/: main.py
core/: cache.py  config.py  freshness.py  logging_setup.py  manifest.py  memory_doc.py  metrics.py  persistent_cache.py  profiles.py  repo.py  resources.py  semantic_cache.py  tokens.py  version.py
docs/: CAPABILITIES.md  CONFIG.md  DEV_WORKFLOW_TOKEN_REPORT.md  DEV_WORKFLOW_TOKEN_REPORT_WITH_LLM.md  FULL_TEST_REPORT.md  HARD_TEST_REPORT.md  LIFECYCLE_SIMULATION.md  WORK_ENV_SMOKE.md
pipeline/: ast_parser.py  indexer.py  memory.py  queue.py  watcher.py
pipeline/retrieval/: __init__.py  ast_rank.py  bm25.py  embeddings.py  hybrid.py  llm_reranker.py  reranker.py  ripgrep.py  structural.py
pipeline/store/: __init__.py  base.py  chroma_store.py  embedders.py  lance_store.py
scripts/: bench_stores.py  dev_workflow_sim.py  embed_test_matrix.sh  full_matrix.py  gpu_bench.py  gpu_bench.sh  hard_test.py  install.sh  lifecycle_sim.py  retrieval_quality.py  verify_fastembed_django.py
server/: api.py  canonical.py  context_assembler.py  mcp_server.py  ollama_client.py  orchestrator.py  streaming.py  sync_engine.py  token_compressor.py  token_tracking.py  toml_filters.py  translate.py  upstream.py  workspace_router.py
server/filters/: git.toml  pytest.toml  python.toml
tests/: conftest.py
tests/corpus/: __init__.py  manifest.py  test_corpus.py
tests/e2e/: __init__.py  conftest.py  test_real_repos.py
tests/fixtures/: __init__.py  builders.py  harness.py
tests/integration/: test_abuse_robustness.py  test_cold_vs_warm_index.py  test_conceptual_recall.py  test_debug_observability.py  test_dimension_mismatch.py  test_fastembed_no_ollama.py  test_harsh_offline_e2e.py  test_hybrid_repo_indexing.py  test_iac_pipeline_e2e.py  test_index_location_warning.py  test_indexer_batch_limits.py  test_init_fastembed_default.py  test_init_scaffold_schema.py  test_isolation_under_stress.py  test_janitor.py  test_lance_store.py  test_large_repo_budget.py  test_large_repo_retrieval.py  test_local_llm_optional.py  test_native_index_roundtrip.py  test_offline_resilience.py  test_parse_safety.py  test_pathological_files.py  test_profile_detection_real.py  test_project_isolation.py  test_server.py  test_slow_filesystem.py  test_symbol_name_retrieval.py  test_sync_e2e.py  test_workspace_memory.py  test_workspace_multi_repo.py  test_workspace_router.py
tests/smoke/: __init__.py  test_smoke.py
tests/unit/: test_assembler_compression.py  test_ast_parser.py  test_ast_parser_languages.py  test_cache.py  test_canonical.py  test_cli_commands.py  test_collect_source_files.py  test_comparison.py  test_comparison_ab.py  test_config_loader.py  test_detect_layout.py  test_embeddings_available.py  test_freshness.py  test_hybrid_scores.py  test_incremental_index.py  test_index_location.py  test_llm_reranker.py  test_mcp_server.py  test_memory.py  test_memory_budget.py  test_memory_doc.py  test_metrics.py  test_model_selection.py  test_ollama_client.py  test_ollama_options.py  test_orchestrator.py  test_persistent_cache.py  test_phase6.py  test_profiles.py  test_queue.py  test_raw_cosine_hybrid.py  test_repo.py  test_reranker.py  test_resources.py  test_retrieval.py  (+16 more)
throttle/: cpu.py  memory.py  vram.py
